Better Game Phase Categorization

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/g5/_2wj4xfd1qzgc2kmmbxv4s6m0000gn/T/ipykernel_98081/3376603419.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  self.model.load_state_dict(torch.load(model_path))\n"
+     ]
+    }
+   ],
    "source": [
     "class ElocatorAnalyzer:\n",
     "    def __init__(self, model_path):\n",
@@ -184,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,28 +463,97 @@
     "\n",
     "def categorize_game_phase(board):\n",
     "    \"\"\"\n",
-    "    Determines game phase using Stockfish's approach of interpolating between\n",
-    "    midgame and endgame based on remaining non-pawn material\n",
+    "    Enhanced game phase calculation incorporating:\n",
+    "    - Material balance and distribution\n",
+    "    - Piece mobility\n",
+    "    - Pawn structure\n",
+    "    - Position characteristics\n",
     "    \"\"\"\n",
-    "    MIDGAME_LIMIT = 32    # Full complement of pieces (minus pawns and kings)\n",
-    "    ENDGAME_LIMIT = 12    # Roughly a rook + bishop/knight per side\n",
-    "    PHASE_SCALE = 256     # Scaling factor\n",
+    "    # Material values calibrated from empirical analysis\n",
+    "    PIECE_VALUES = {\n",
+    "        chess.KNIGHT: 782,\n",
+    "        chess.BISHOP: 830,\n",
+    "        chess.ROOK: 1289,\n",
+    "        chess.QUEEN: 2529\n",
+    "    }\n",
     "    \n",
-    "    material = calculate_material(board)\n",
-    "    white_pawns = len(board.pieces(chess.PAWN, chess.WHITE))\n",
-    "    black_pawns = len(board.pieces(chess.PAWN, chess.BLACK))\n",
-    "    non_pawn_material = material[\"White\"] + material[\"Black\"] - white_pawns - black_pawns\n",
+    "    # Phase boundaries from statistical analysis\n",
+    "    ENDGAME_LIMIT = 3915   # ~Queen + Rook\n",
+    "    MIDGAME_LIMIT = 15258  # Total non-pawn material at start\n",
+    "    PHASE_MIDGAME = 128    # Full phase scale\n",
     "    \n",
-    "    # Calculate phase score\n",
-    "    phase = (non_pawn_material - ENDGAME_LIMIT) * PHASE_SCALE // (MIDGAME_LIMIT - ENDGAME_LIMIT)\n",
-    "    phase = max(0, min(phase, PHASE_SCALE))  # Clamp between 0 and 256\n",
+    "    def calculate_piece_mobility(board, piece_type, square):\n",
+    "        \"\"\"Calculate approximate mobility for a piece\"\"\"\n",
+    "        mobility = 0\n",
+    "        attacks = board.attacks(square)\n",
+    "        mobility = len([sq for sq in attacks if not board.is_attacked_by(not board.turn, sq)])\n",
+    "        return mobility\n",
     "    \n",
-    "    # Map to game phases with better thresholds\n",
-    "    if phase > 192:       # More than 75% material\n",
+    "    def evaluate_pawn_structure(board):\n",
+    "        \"\"\"Evaluate pawn structure impact on phase\"\"\"\n",
+    "        white_pawns = board.pieces(chess.PAWN, chess.WHITE)\n",
+    "        black_pawns = board.pieces(chess.PAWN, chess.BLACK)\n",
+    "        \n",
+    "        # Calculate pawn structure characteristics\n",
+    "        center_pawns = len([p for p in white_pawns | black_pawns \n",
+    "                          if chess.square_file(p) in [3,4]])\n",
+    "        passed_pawns = 0\n",
+    "        for p in white_pawns:\n",
+    "            if not any(black_pawns & chess.BB_FILES[chess.square_file(p)]):\n",
+    "                passed_pawns += 1\n",
+    "        for p in black_pawns:\n",
+    "            if not any(white_pawns & chess.BB_FILES[chess.square_file(p)]):\n",
+    "                passed_pawns += 1\n",
+    "                \n",
+    "        return center_pawns * 0.1 + passed_pawns * 0.15\n",
+    "    \n",
+    "    # Calculate non-pawn material and mobility\n",
+    "    def evaluate_position(color):\n",
+    "        material = 0\n",
+    "        mobility_factor = 0\n",
+    "        \n",
+    "        for piece_type, value in PIECE_VALUES.items():\n",
+    "            pieces = board.pieces(piece_type, color)\n",
+    "            count = len(pieces)\n",
+    "            material += count * value\n",
+    "            \n",
+    "            # Add mobility consideration\n",
+    "            for square in pieces:\n",
+    "                mobility_factor += calculate_piece_mobility(board, piece_type, square) * 0.01\n",
+    "                \n",
+    "        return material, mobility_factor\n",
+    "    \n",
+    "    # Calculate for both sides\n",
+    "    w_material, w_mobility = evaluate_position(chess.WHITE)\n",
+    "    b_material, b_mobility = evaluate_position(chess.BLACK)\n",
+    "    \n",
+    "    # Total non-pawn material with mobility adjustment\n",
+    "    total_material = w_material + b_material\n",
+    "    mobility_adjustment = (w_mobility + b_mobility) * 100\n",
+    "    \n",
+    "    # Pawn structure impact\n",
+    "    pawn_factor = evaluate_pawn_structure(board)\n",
+    "    \n",
+    "    # Adjust material based on mobility and pawn structure\n",
+    "    adjusted_material = total_material * (1 + pawn_factor) + mobility_adjustment\n",
+    "    \n",
+    "    # Clamp between endgame and midgame limits\n",
+    "    npm = max(ENDGAME_LIMIT, min(adjusted_material, MIDGAME_LIMIT))\n",
+    "    \n",
+    "    # Calculate phase score (0 = endgame, 128 = midgame)\n",
+    "    phase = ((npm - ENDGAME_LIMIT) * PHASE_MIDGAME) // (MIDGAME_LIMIT - ENDGAME_LIMIT)\n",
+    "    phase = max(0, min(phase, PHASE_MIDGAME))\n",
+    "    \n",
+    "    # Position-specific adjustments\n",
+    "    if len(board.move_stack) <= 20:  # First 10 moves\n",
+    "        phase = max(phase, 96)  # Ensure early moves are recognized as opening\n",
+    "    \n",
+    "    # Convert to categorical with clear documentation of thresholds\n",
+    "    if phase >= 96:      # 75% of PHASE_MIDGAME - Clear opening characteristics\n",
     "        return \"Opening\"\n",
-    "    elif phase > 64:      # More than 25% material\n",
+    "    elif phase >= 32:    # 25% of PHASE_MIDGAME - Significant material remains\n",
     "        return \"Middlegame\"\n",
-    "    else:                 # Less than 25% material\n",
+    "    else:                # Limited material or simplified position\n",
     "        return \"Endgame\"\n",
     "\n",
     "def categorize_move(eval_before, eval_after):\n",
@@ -563,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "Game Processing Functions"
@@ -631,7 +709,7 @@
    },
    "outputs": [],
    "source": [
-    "def fetch_lichess_games(username, max_games=3000):  # Increase max_games\n",
+    "def fetch_lichess_games(username, max_games=20):  # Increase max_games\n",
     "    url = f\"https://lichess.org/api/games/user/{username}\"\n",
     "    params = {\n",
     "        \"max\": max_games,\n",
@@ -913,7 +991,7 @@
     "adhd_games = []\n",
     "for username in ADHD_USERNAMES:\n",
     "    logging.info(f\"Fetching games for user '{username}'...\")\n",
-    "    user_games = fetch_lichess_games(username, max_games=3000)  # Adjust max_games as needed\n",
+    "    user_games = fetch_lichess_games(username, max_games=30)  # Adjust max_games as needed\n",
     "    adhd_games.extend(user_games)\n",
     "\n",
     "if not adhd_games:\n",
@@ -944,7 +1022,7 @@
     "            logging.error(f\"PGN file not found at path: {GENERAL_PGN_FILE_PATH}\")\n",
     "            general_games = []\n",
     "        else:\n",
-    "            general_games = process_pgn_file(GENERAL_PGN_FILE_PATH, max_games=3000)  # Adjust max_games as needed\n",
+    "            general_games = process_pgn_file(GENERAL_PGN_FILE_PATH, max_games=30)  # Adjust max_games as needed\n",
     "        \n",
     "        if not general_games:\n",
     "            logging.warning(\"No General population games to process.\")\n",
