--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/g5/_2wj4xfd1qzgc2kmmbxv4s6m0000gn/T/ipykernel_98081/3376603419.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/var/folders/g5/_2wj4xfd1qzgc2kmmbxv4s6m0000gn/T/ipykernel_3885/3141903425.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  self.model.load_state_dict(torch.load(model_path))\n"
      ]
     }
@@ -88,19 +88,47 @@
     "        self.model.load_state_dict(torch.load(model_path))\n",
     "        self.model.eval()\n",
     "        \n",
+    "        # Correct percentile ranges from the repo\n",
+    "        self.percentile_ranges = {\n",
+    "            1: (0, 0.006848618667572737),\n",
+    "            2: (0.006848618667572737, 0.007860606908798218),\n",
+    "            3: (0.007860606908798218, 0.0093873867765069),\n",
+    "            4: (0.0093873867765069, 0.010885232314467431),\n",
+    "            5: (0.010885232314467431, 0.01191701553761959),\n",
+    "            6: (0.01191701553761959, 0.012793240323662757),\n",
+    "            7: (0.012793240323662757, 0.013946877606213093),\n",
+    "            8: (0.013946877606213093, 0.015834777429699905),\n",
+    "            9: (0.015834777429699905, 0.02067287489771843),\n",
+    "            10: (0.02067287489771843, 1)\n",
+    "        }\n",
+    "    \n",
+    "    def map_prediction_to_complexity(self, prediction):\n",
+    "        \"\"\"Maps raw model output to complexity score (1-10)\"\"\"\n",
+    "        for level, (low, high) in self.percentile_ranges.items():\n",
+    "            if low <= prediction <= high:\n",
+    "                return level\n",
+    "        return None  # Handle predictions outside expected range\n",
+    "    \n",
     "    def get_position_complexity(self, fen):\n",
+    "        \"\"\"Get complexity score for a single position\"\"\"\n",
     "        try:\n",
     "            # Sanitize the FEN string before processing\n",
     "            clean_fen = sanitize_fen(fen)\n",
+    "            if clean_fen is None:\n",
+    "                return None\n",
+    "                \n",
     "            encoded_position = fen_encoder(clean_fen)\n",
     "            position_tensor = torch.FloatTensor(encoded_position).unsqueeze(0)\n",
+    "            \n",
     "            with torch.no_grad():\n",
-    "                complexity = self.model(position_tensor)\n",
-    "            return complexity.item()\n",
+    "                raw_prediction = self.model(position_tensor).item()\n",
+    "                complexity_score = self.map_prediction_to_complexity(raw_prediction)\n",
+    "                return complexity_score\n",
+    "                \n",
     "        except Exception as e:\n",
     "            logging.error(f\"Error processing FEN {fen}: {str(e)}\")\n",
     "            return None\n",
-    "    \n",
+    "            \n",
     "    def analyze_game(self, pgn_game):\n",
     "        board = pgn_game.board()\n",
     "        node = pgn_game\n",
@@ -108,9 +136,10 @@
     "        \n",
     "        # Get initial position\n",
     "        try:\n",
+    "            complexity = self.get_position_complexity(board.fen())\n",
     "            positions.append({\n",
     "                'fen': board.fen(),\n",
-    "                'complexity': self.get_position_complexity(board.fen()),\n",
+    "                'complexity': complexity,\n",
     "                'move_number': 0\n",
     "            })\n",
     "        except Exception as e:\n",
@@ -138,6 +167,11 @@
     "                \n",
     "        return positions\n",
     "\n",
+    "# Create global instance\n",
+    "elocator = ElocatorAnalyzer('elocator_test/complexity/models/model.pth')\n",
+    "\n",
+    "# Create global instance\n",
+    "elocator = ElocatorAnalyzer('elocator_test/complexity/models/model.pth')\n",
     "# Create global instance\n",
     "elocator = ElocatorAnalyzer('elocator_test/complexity/models/model.pth')\n",
     "    \n",
@@ -193,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "tags": [
      "Game Processing Functions"
