Proper Time Pressure Computation

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/g5/_2wj4xfd1qzgc2kmmbxv4s6m0000gn/T/ipykernel_19770/3141903425.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/var/folders/g5/_2wj4xfd1qzgc2kmmbxv4s6m0000gn/T/ipykernel_30787/3141903425.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  self.model.load_state_dict(torch.load(model_path))\n"
      ]
     }
@@ -270,33 +270,33 @@
     "\n",
     "#Parsing and Categorizing Time Control\n",
     "def parse_time_control(time_control):\n",
+    "    \"\"\"Parse time control string from Lichess format (already in seconds)\"\"\"\n",
     "    if not time_control or time_control == \"unknown\":\n",
     "        return None, None, TimeControlType.UNKNOWN\n",
+    "        \n",
     "    try:\n",
     "        if \"+\" in time_control:\n",
     "            base, increment = time_control.split(\"+\")\n",
-    "            base_minutes = int(base)\n",
+    "            initial_seconds = int(base)  # Already in seconds, don't multiply\n",
     "            increment_seconds = int(increment)\n",
     "        else:\n",
-    "            base_minutes = int(time_control)\n",
+    "            initial_seconds = int(time_control)  # Already in seconds\n",
     "            increment_seconds = 0\n",
-    "        \n",
-    "        initial_time_seconds = base_minutes * 60\n",
-    "\n",
-    "        if base_minutes >= 3600:\n",
+    "            \n",
+    "        # Categorize based on seconds\n",
+    "        if initial_seconds >= 1800:     # 30 minutes or more\n",
     "            category = TimeControlType.CLASSICAL\n",
-    "        elif base_minutes >= 600:\n",
+    "        elif initial_seconds >= 600:     # 10 minutes or more\n",
     "            category = TimeControlType.RAPID\n",
-    "        elif base_minutes >= 180:\n",
+    "        elif initial_seconds >= 180:     # 3 minutes or more\n",
     "            category = TimeControlType.BLITZ\n",
-    "        else:\n",
+    "        else:                           # Less than 3 minutes\n",
     "            category = TimeControlType.BULLET\n",
-    "\n",
-    "        return initial_time_seconds, increment_seconds, category\n",
-    "\n",
+    "            \n",
+    "        return initial_seconds, increment_seconds, category\n",
+    "        \n",
     "    except (ValueError, TypeError):\n",
     "        return None, None, TimeControlType.UNKNOWN\n",
-    "\n",
     "\n",
     "def calculate_material(board):\n",
     "    # Returns material balance for both sides\n",
@@ -1083,7 +1083,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing ADHD games: 100%|██████████| 70/70 [00:09<00:00,  7.18it/s]"
+      "Processing ADHD games: 100%|██████████| 70/70 [00:09<00:00,  7.34it/s]"
      ]
     },
     {
@@ -1122,7 +1122,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing General games: 100%|██████████| 30/30 [00:05<00:00,  5.97it/s]"
+      "Processing General games: 100%|██████████| 30/30 [00:04<00:00,  6.01it/s]"
      ]
     },
     {
