Time Pressure Definition that handles premoves

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/g5/_2wj4xfd1qzgc2kmmbxv4s6m0000gn/T/ipykernel_30787/3141903425.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/var/folders/g5/_2wj4xfd1qzgc2kmmbxv4s6m0000gn/T/ipykernel_30907/3141903425.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  self.model.load_state_dict(torch.load(model_path))\n"
      ]
     }
@@ -252,14 +252,34 @@
     "## Determine if a player is under time pressure based on van Harreveld et al. (2007) criteria ---\n",
     "\n",
     "def is_under_time_pressure(time_remaining, initial_time, time_spent):\n",
-    "    if any(x is None for x in [time_remaining,initial_time, time_spent]):\n",
-    "        return None\n",
-    "\n",
-    "    absolute_pressure = time_remaining < 30\n",
-    "    relative_pressure = (time_remaining / initial_time) < 0.1 if initial_time else False\n",
-    "    ratio_pressure = (time_spent / time_remaining > 0.3) if time_remaining else False\n",
-    "\n",
-    "    return absolute_pressure or relative_pressure or ratio_pressure\n",
+    "    \"\"\"\n",
+    "    Determine time pressure, accounting for premoves and missing data\n",
+    "    - Premoves (time_spent = 0) should never count as time pressure\n",
+    "    - Missing time data should be handled safely\n",
+    "    \"\"\"\n",
+    "    # Handle None/missing values\n",
+    "    if any(x is None for x in [time_remaining, initial_time]):\n",
+    "        return False\n",
+    "        \n",
+    "    # Handle invalid values\n",
+    "    try:\n",
+    "        time_remaining = float(time_remaining)\n",
+    "        initial_time = float(initial_time)\n",
+    "        # time_spent can be None for missing data or 0 for premoves\n",
+    "        time_spent = float(time_spent) if time_spent is not None else None\n",
+    "    except (TypeError, ValueError):\n",
+    "        return False\n",
+    "        \n",
+    "    # Invalid time states\n",
+    "    if initial_time <= 0 or time_remaining < 0:\n",
+    "        return False\n",
+    "        \n",
+    "    # If it's a premove (time_spent = 0) or missing time data,\n",
+    "    # only check absolute and relative time remaining\n",
+    "    absolute_pressure = time_remaining < 30  # Less than 30 seconds\n",
+    "    relative_pressure = time_remaining < (0.1 * initial_time)  # Less than 10% of initial time\n",
+    "        \n",
+    "    return absolute_pressure or relative_pressure\n",
     "\n",
     "class TimeControlType(Enum):\n",
     "    CLASSICAL = \"Classical\"\n",
@@ -1083,7 +1103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing ADHD games: 100%|██████████| 70/70 [00:09<00:00,  7.34it/s]"
+      "Processing ADHD games: 100%|██████████| 70/70 [00:09<00:00,  7.28it/s]"
      ]
     },
     {
@@ -1122,7 +1142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing General games: 100%|██████████| 30/30 [00:04<00:00,  6.01it/s]"
+      "Processing General games: 100%|██████████| 30/30 [00:04<00:00,  6.19it/s]"
      ]
     },
     {
