Fixed Evaluation Change

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -685,11 +685,8 @@
     "        except ValueError:\n",
     "            return None\n",
     "        \n",
+    "\n",
     "def calculate_eval_change(prev_evaluation, evaluation, player):\n",
-    "    \"\"\"\n",
-    "    Calculate evaluation change accounting for player color and mate scores\n",
-    "    Returns the change in centipawns from the player's perspective\n",
-    "    \"\"\"\n",
     "    if prev_evaluation is None or evaluation is None:\n",
     "        return None\n",
     "        \n",
@@ -698,8 +695,8 @@
     "        if isinstance(eval_str, str) and '#' in eval_str:\n",
     "            # Extract mate number\n",
     "            mate_num = int(eval_str.replace('#', ''))\n",
-    "            # Convert to centipawns (± 10000 depending on mate for/against)\n",
-    "            return 10000 if mate_num > 0 else -10000\n",
+    "            # Convert to centipawns (using a more reasonable value)\n",
+    "            return 2000 if mate_num > 0 else -2000  # Changed from ±10000\n",
     "        return float(eval_str)\n",
     "    \n",
     "    try:\n",
@@ -713,7 +710,7 @@
     "        if player.lower() == \"black\":\n",
     "            change = -change\n",
     "            \n",
-    "        return change\n",
+    "        return change  # Removed the *100\n",
     "        \n",
     "    except (ValueError, TypeError) as e:\n",
     "        logging.error(f\"Error calculating eval change: {str(e)}\")\n",
