--- a/Main.ipynb
+++ b/Main.ipynb
@@ -690,27 +690,21 @@
     "    if prev_evaluation is None or evaluation is None:\n",
     "        return None\n",
     "        \n",
-    "    # Convert mate scores to numeric values\n",
     "    def process_eval(eval_str):\n",
     "        if isinstance(eval_str, str) and '#' in eval_str:\n",
-    "            # Extract mate number\n",
     "            mate_num = int(eval_str.replace('#', ''))\n",
-    "            # Convert to centipawns (using a more reasonable value)\n",
-    "            return 2000 if mate_num > 0 else -2000  # Changed from ±10000\n",
+    "            return 2000 if mate_num > 0 else -2000\n",
     "        return float(eval_str)\n",
     "    \n",
     "    try:\n",
     "        prev_val = process_eval(prev_evaluation)\n",
     "        curr_val = process_eval(evaluation)\n",
-    "        \n",
-    "        # Calculate change (current - prev because an increase is good)\n",
     "        change = curr_val - prev_val\n",
     "        \n",
-    "        # Flip for black (since evaluations are from White's perspective)\n",
     "        if player.lower() == \"black\":\n",
     "            change = -change\n",
     "            \n",
-    "        return change  # Removed the *100\n",
+    "        return change * 100  # Convert from pawns to centipawns\n",
     "        \n",
     "    except (ValueError, TypeError) as e:\n",
     "        logging.error(f\"Error calculating eval change: {str(e)}\")\n",
